// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components storyshots components/Details Default 1`] = `
<div
  className=""
  data-gap={1}
  style={
    Object {
      "alignItems": "start",
      "gridAutoFlow": "row",
      "gridTemplateColumns": "none",
      "gridTemplateRows": "none",
      "justifyContent": "normal",
    }
  }
>
  <h3
    className=""
    onClick={[Function]}
  >
    Is Mati secure?
  </h3>
</div>
`;

exports[`Components storyshots components/Details Pre-opened 1`] = `
<div
  className=""
  data-gap={1}
  style={
    Object {
      "alignItems": "start",
      "gridAutoFlow": "row",
      "gridTemplateColumns": "none",
      "gridTemplateRows": "none",
      "justifyContent": "normal",
    }
  }
>
  <h3
    className="opened"
    onClick={[Function]}
  >
    Is Mati secure?
  </h3>
  <div
    className="text-secondary"
  >
    <p>
      In short, yes it is. In fact, the lack of security in most of the applications we use today is the reason we built Mati.
    </p>
    <p>
      We strongly believe the only path forward in securing our digital lives is to lift this responsibility away from users and put it on the technology around us. As we see it, security is either missing altogether or too frustrating to use.
    </p>
    <p>
      That is why we tried to minimize the difficulty and make Mati easy to use, but keep security as the highest priority.We use highly secure cryptographic methods to secure your data at Mati. All of your sensitive data is encrypted using standards-based crypto-algorithms.
    </p>
    <p>
      Unlike proprietary algorithms, standards-based algorithms have gone through public scrutiny by industry and security experts that reduces the chance of any inherent weaknesses or vulnerabilities.We also continuously make the best effort to secure our servers online and client applications locally.
    </p>
  </div>
</div>
`;

exports[`Components storyshots components/Items Default 1`] = `
<div
  className=""
  data-gap={2}
  style={
    Object {
      "alignItems": "start",
      "gridAutoFlow": "column",
      "gridTemplateColumns": "none",
      "gridTemplateRows": "none",
      "justifyContent": "normal",
    }
  }
>
  <div
    style={
      Object {
        "background": "orange",
        "minHeight": "80px",
        "minWidth": "100px",
      }
    }
  />
  <div
    style={
      Object {
        "background": "blue",
        "minHeight": "160px",
        "minWidth": "40px",
      }
    }
  />
  <div
    style={
      Object {
        "background": "orange",
        "minHeight": "80px",
        "minWidth": "100px",
      }
    }
  />
  <div
    style={
      Object {
        "background": "blue",
        "minHeight": "160px",
        "minWidth": "40px",
      }
    }
  />
</div>
`;

exports[`Components storyshots components/Panel Default 1`] = `
<div
  className="padded"
>
  <aside
    className="background-softpink"
    style={
      Object {
        "width": "25px",
      }
    }
  >
    S T U B
  </aside>
  <main>
    <p
      style={
        Object {
          "color": "crimson",
          "fontSize": "48px",
        }
      }
    >
      Panel content
    </p>
  </main>
</div>
`;

exports[`Components storyshots components/YoutubeOverlay Default 1`] = `
Array [
  " ",
  <button
    onClick={[Function]}
  >
    Sample Overlay
  </button>,
]
`;

exports[`Fragments storyshots fragments/info/Faq Default 1`] = `
<div
  className=""
>
  <div
    className="padded"
  >
    <main>
      <div
        className=""
        data-gap={2}
        style={
          Object {
            "alignItems": "start",
            "gridAutoFlow": "row",
            "gridTemplateColumns": "none",
            "gridTemplateRows": "none",
            "justifyContent": "normal",
          }
        }
      >
        <h2>
          fragments.info.faq.title
        </h2>
        <div
          className=""
          data-gap={2}
          style={
            Object {
              "alignItems": "start",
              "gridAutoFlow": "row",
              "gridTemplateColumns": "none",
              "gridTemplateRows": "none",
              "justifyContent": "normal",
            }
          }
        >
          <div
            className=""
            data-gap={1}
            style={
              Object {
                "alignItems": "start",
                "gridAutoFlow": "row",
                "gridTemplateColumns": "none",
                "gridTemplateRows": "none",
                "justifyContent": "normal",
              }
            }
          >
            <h3
              className=""
              onClick={[Function]}
            >
              How will Mati verify my users?
            </h3>
          </div>
          <hr />
          <div
            className=""
            data-gap={1}
            style={
              Object {
                "alignItems": "start",
                "gridAutoFlow": "row",
                "gridTemplateColumns": "none",
                "gridTemplateRows": "none",
                "justifyContent": "normal",
              }
            }
          >
            <h3
              className=""
              onClick={[Function]}
            >
              Is Mati secure?
            </h3>
          </div>
          <hr />
          <div
            className=""
            data-gap={1}
            style={
              Object {
                "alignItems": "start",
                "gridAutoFlow": "row",
                "gridTemplateColumns": "none",
                "gridTemplateRows": "none",
                "justifyContent": "normal",
              }
            }
          >
            <h3
              className=""
              onClick={[Function]}
            >
              Which countries do you support?
            </h3>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Fragments storyshots fragments/integration/GooglePlayLink Default 1`] = `
<div
  className=""
>
  <div
    className="padded"
  >
    <main>
      <div
        className=""
        data-gap={2}
        style={
          Object {
            "alignItems": "start",
            "gridAutoFlow": "row",
            "gridTemplateColumns": "none",
            "gridTemplateRows": "none",
            "justifyContent": "normal",
          }
        }
      >
        <div
          className=""
          data-gap={4}
          style={
            Object {
              "alignItems": "start",
              "gridAutoFlow": "row",
              "gridTemplateColumns": "none",
              "gridTemplateRows": "none",
              "justifyContent": "normal",
            }
          }
        >
          <h3>
            developers.demo.demo
            <p>
              developers.demo.description
            </p>
          </h3>
          <div
            className=""
            data-gap={1}
            style={
              Object {
                "alignItems": "start",
                "gridAutoFlow": "row",
                "gridTemplateColumns": "none",
                "gridTemplateRows": "none",
                "justifyContent": "center",
              }
            }
          >
            <a
              href="https://play.google.com/store/apps/details?id=com.matilock.mati_global_demo"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="Google Play"
                src="google-play.png"
              />
            </a>
            <p>
              developers.demo.buttonDescription
            </p>
          </div>
          <div
            className=""
            data-gap={1}
            style={
              Object {
                "alignItems": "start",
                "gridAutoFlow": "row",
                "gridTemplateColumns": "none",
                "gridTemplateRows": "none",
                "justifyContent": "normal",
              }
            }
          >
            <h3>
              developers.demo.clientId
              <p>
                developers.demo.clientIdDescription
              </p>
            </h3>
            <div>
              CLIENT ID NUMBER
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Fragments storyshots fragments/integration/InstallationGuidePanels ApplicationsPanel 1`] = `
<div
  className="padded extraPadding"
>
  <aside
    className="aside background-apricot"
  >
    <h2
      className="text-darkapricot"
    >
      2
    </h2>
  </aside>
  <main>
    <div
      className=""
      data-gap={4}
      style={
        Object {
          "alignItems": "center",
          "gridAutoFlow": "column",
          "gridTemplateColumns": "4fr 5fr",
          "gridTemplateRows": "none",
          "justifyContent": "normal",
        }
      }
    >
      <div
        className=""
        data-gap={4}
        style={
          Object {
            "alignItems": "start",
            "gridAutoFlow": "row",
            "gridTemplateColumns": "none",
            "gridTemplateRows": "none",
            "justifyContent": "normal",
          }
        }
      >
        <div
          className=""
          data-gap={1}
          style={
            Object {
              "alignItems": "start",
              "gridAutoFlow": "row",
              "gridTemplateColumns": "none",
              "gridTemplateRows": "none",
              "justifyContent": "normal",
            }
          }
        >
          <h2>
            fragments.integration.installation-guide-panels.applications-panel.title
          </h2>
          <p>
            fragments.integration.installation-guide-panels.applications-panel.message
          </p>
        </div>
        <a
          aria-current={null}
          className="default primary"
          href="/integration/applications"
          onClick={[Function]}
          type="button"
        >
          fragments.integration.installation-guide-panels.applications-panel.button
        </a>
      </div>
      <svg>
        applications.svg
      </svg>
    </div>
  </main>
</div>
`;

exports[`Fragments storyshots fragments/integration/InstallationGuidePanels InstallFrontendCodePanel 1`] = `
<div
  className="padded extraPadding"
>
  <aside
    className="aside background-apricot"
  >
    <h2
      className="text-darkapricot"
    >
      3
    </h2>
  </aside>
  <main>
    <div
      className=""
      data-gap={4}
      style={
        Object {
          "alignItems": "center",
          "gridAutoFlow": "column",
          "gridTemplateColumns": "4fr 5fr",
          "gridTemplateRows": "none",
          "justifyContent": "normal",
        }
      }
    >
      <div
        className=""
        data-gap={4}
        style={
          Object {
            "alignItems": "start",
            "gridAutoFlow": "row",
            "gridTemplateColumns": "none",
            "gridTemplateRows": "none",
            "justifyContent": "normal",
          }
        }
      >
        <div
          className=""
          data-gap={1}
          style={
            Object {
              "alignItems": "start",
              "gridAutoFlow": "row",
              "gridTemplateColumns": "none",
              "gridTemplateRows": "none",
              "justifyContent": "normal",
            }
          }
        >
          <h2>
            fragments.integration.installation-guide-panels.jssdk-panel.title
          </h2>
          <p>
            fragments.integration.installation-guide-panels.jssdk-panel.message
          </p>
        </div>
        <a
          aria-current={null}
          className="default primary"
          href="/integration/integration-code"
          onClick={[Function]}
          type="button"
        >
          fragments.integration.installation-guide-panels.jssdk-panel.button
        </a>
      </div>
      <svg
        className="cursor-pointer"
        onClick={[Function]}
      >
        video.svg
      </svg>
    </div>
  </main>
</div>
`;

exports[`Fragments storyshots fragments/integration/InstallationGuidePanels LetsStartPanel 1`] = `
<div
  className="background-apricot padded extraPadding"
>
  <aside
    className="aside background-apricot"
  >
    <h2
      className="text-darkapricot"
    />
  </aside>
  <main>
    <div
      className=""
      data-gap={4}
      style={
        Object {
          "alignItems": "center",
          "gridAutoFlow": "column",
          "gridTemplateColumns": "4fr 5fr",
          "gridTemplateRows": "none",
          "justifyContent": "normal",
        }
      }
    >
      <div
        className=""
        data-gap={2}
        style={
          Object {
            "alignItems": "start",
            "gridAutoFlow": "row",
            "gridTemplateColumns": "none",
            "gridTemplateRows": "none",
            "justifyContent": "normal",
          }
        }
      >
        <h2>
          fragments.integration.installation-guide-panels.start-panel.title
        </h2>
        <p>
          fragments.integration.installation-guide-panels.start-panel.message
        </p>
      </div>
      <svg>
        lets-start.svg
      </svg>
    </div>
  </main>
</div>
`;

exports[`Fragments storyshots fragments/integration/InstallationGuidePanels SetWebhooksPanel 1`] = `
<div
  className="padded extraPadding"
>
  <aside
    className="aside background-apricot"
  >
    <h2
      className="text-darkapricot"
    >
      4
    </h2>
  </aside>
  <main>
    <div
      className=""
      data-gap={4}
      style={
        Object {
          "alignItems": "center",
          "gridAutoFlow": "column",
          "gridTemplateColumns": "4fr 5fr",
          "gridTemplateRows": "none",
          "justifyContent": "normal",
        }
      }
    >
      <div
        className=""
        data-gap={4}
        style={
          Object {
            "alignItems": "start",
            "gridAutoFlow": "row",
            "gridTemplateColumns": "none",
            "gridTemplateRows": "none",
            "justifyContent": "normal",
          }
        }
      >
        <div
          className=""
          data-gap={1}
          style={
            Object {
              "alignItems": "start",
              "gridAutoFlow": "row",
              "gridTemplateColumns": "none",
              "gridTemplateRows": "none",
              "justifyContent": "normal",
            }
          }
        >
          <h2>
            fragments.integration.installation-guide-panels.webhooks-panel.title
          </h2>
          <p>
            fragments.integration.installation-guide-panels.webhooks-panel.message
          </p>
        </div>
        <a
          aria-current={null}
          className="default primary"
          href="/integration/webhooks"
          onClick={[Function]}
          type="button"
        >
          fragments.integration.installation-guide-panels.webhooks-panel.button
        </a>
      </div>
      <div
        className=""
        data-gap={2}
        style={
          Object {
            "alignItems": "start",
            "gridAutoFlow": "row",
            "gridTemplateColumns": "none",
            "gridTemplateRows": "none",
            "justifyContent": "normal",
          }
        }
      >
        <svg
          className="cursor-pointer"
          onClick={[Function]}
        >
          video.svg
        </svg>
        <section>
          fragments.integration.installation-guide-panels.webhooks-panel.link
          : 
          <a
            href="https://docs.getmati.com"
          >
            docs.getmati.com
          </a>
        </section>
      </div>
    </div>
  </main>
</div>
`;

exports[`Fragments storyshots fragments/integration/InstallationGuidePanels VerificationPanel 1`] = `
<div
  className="padded extraPadding"
>
  <aside
    className="aside background-apricot"
  >
    <h2
      className="text-darkapricot"
    >
      1
    </h2>
  </aside>
  <main>
    <div
      className=""
      data-gap={4}
      style={
        Object {
          "alignItems": "center",
          "gridAutoFlow": "column",
          "gridTemplateColumns": "4fr 5fr",
          "gridTemplateRows": "none",
          "justifyContent": "normal",
        }
      }
    >
      <div
        className=""
        data-gap={4}
        style={
          Object {
            "alignItems": "start",
            "gridAutoFlow": "row",
            "gridTemplateColumns": "none",
            "gridTemplateRows": "none",
            "justifyContent": "normal",
          }
        }
      >
        <div
          className=""
          data-gap={1}
          style={
            Object {
              "alignItems": "start",
              "gridAutoFlow": "row",
              "gridTemplateColumns": "none",
              "gridTemplateRows": "none",
              "justifyContent": "normal",
            }
          }
        >
          <h2>
            fragments.integration.installation-guide-panels.verification-panel.title
          </h2>
          <p>
            fragments.integration.installation-guide-panels.verification-panel.message
          </p>
        </div>
        <a
          aria-current="page"
          className="default primary active"
          href="/"
          onClick={[Function]}
          style={Object {}}
          type="button"
        >
          fragments.integration.installation-guide-panels.verification-panel.button
        </a>
      </div>
      <svg>
        verification.svg
      </svg>
    </div>
  </main>
</div>
`;

exports[`Fragments storyshots fragments/integration/WebhooksDocsPanel Default 1`] = `
<div
  className="padded extraPadding"
>
  <main>
    <div
      className=""
      data-gap={4}
      style={
        Object {
          "alignItems": "start",
          "gridAutoFlow": "row",
          "gridTemplateColumns": "none",
          "gridTemplateRows": "none",
          "justifyContent": "normal",
        }
      }
    >
      <h2>
        fragments.integration.webhooks-docs-panel.title
        <p>
          fragments.integration.webhooks-docs-panel.subtitle
        </p>
      </h2>
      <div
        className=""
        data-gap={4}
        style={
          Object {
            "alignItems": "start",
            "gridAutoFlow": "column",
            "gridTemplateColumns": "1fr 1fr",
            "gridTemplateRows": "none",
            "justifyContent": "normal",
          }
        }
      >
        <svg>
          picture.svg
        </svg>
        <svg
          className="cursor-pointer"
          onClick={[Function]}
        >
          installation-video.svg
        </svg>
      </div>
      <section>
        <a
          className="default primary"
          href="https://docs.getmati.com"
          rel="noopener noreferrer"
          target="_blank"
          type="button"
        >
          fragments.integration.webhooks-docs-panel.button
        </a>
      </section>
    </div>
  </main>
</div>
`;

exports[`Fragments storyshots fragments/integration/WebhooksTestPanel default 1`] = `
<div
  className="background-softpink padded extraPadding"
>
  <main>
    <div
      className=""
      data-gap={2}
      style={
        Object {
          "alignItems": "start",
          "gridAutoFlow": "row",
          "gridTemplateColumns": "none",
          "gridTemplateRows": "none",
          "justifyContent": "normal",
        }
      }
    >
      <h2>
        fragments.integration.webhooks-test-panel.title
      </h2>
      <div
        className=""
        data-gap={2}
        style={
          Object {
            "alignItems": "center",
            "gridAutoFlow": "column",
            "gridTemplateColumns": "1fr 1fr",
            "gridTemplateRows": "none",
            "justifyContent": "normal",
          }
        }
      >
        <ol
          className="mgi-list"
        >
          <li>
            fragments.integration.webhooks-test-panel.list.0
          </li>
          <li>
            fragments.integration.webhooks-test-panel.list.1
          </li>
          <li>
            fragments.integration.webhooks-test-panel.list.2
          </li>
          <li>
            fragments.integration.webhooks-test-panel.list.3
          </li>
        </ol>
        <svg>
          picture.svg
        </svg>
      </div>
      <div
        className=""
        data-gap={1}
        style={
          Object {
            "alignItems": "start",
            "gridAutoFlow": "row",
            "gridTemplateColumns": "none",
            "gridTemplateRows": "none",
            "justifyContent": "normal",
          }
        }
      >
        <h3
          className="text-darkpink"
        >
          <small>
            fragments.integration.webhooks-test-panel.pro-tip.caption
          </small>
        </h3>
        <div
          className="inline"
          data-gap={2}
          style={
            Object {
              "alignItems": "start",
              "gridAutoFlow": "column",
              "gridTemplateColumns": "none",
              "gridTemplateRows": "none",
              "justifyContent": "start",
            }
          }
        >
          <div
            className="background-transparent text-darkpink padded extraSmallPadding undefined"
          >
            <main>
              <small>
                fragments.integration.webhooks-test-panel.pro-tip.message
              </small>
            </main>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
